# hackaton-back

./: .gitignore  create_admin.py  pyproject.toml
hackaton/: app.py  database.py  models.py  schemas.py  security.py  settings.py
hackaton/routers/: ai.py  audits.py  auth.py  files.py  users.py
migrations/: env.py
migrations/versions/: e25ee4af927d_create_database.py
